syntax = "proto3";

option java_multiple_files =  true;
option java_package = "com.example.board.grpc.lib"; // <<< 우리가 사용할 패키지 이름
option java_outer_classname = "HelloWorldProto";

import "google/protobuf/timestamp.proto";

// {serviceName}Grpc.{serviceName}ImplBase 자바 클래스로 네이밍 된다.
service Board {
  // rpc 함수이름 (파라미터타입) returns (반환타입) {}
  rpc Save (GrpcBoardSaveRequest) returns (GrpcBoardSaveReply) {}
}

// 데이터 구조(data class 같은 역할)
message GrpcBoardSaveRequest {
  string category_id = 2; // 필드 인덱스는 겹치지 않게 작성. 값 범위 등은 공식 문서 확인.
  string title = 3;
  sint32 content = 4;
  GrpcBoardStatus status = 5;
  repeated string tag = 6; // <<< 단수 네이밍 사용(알아서 네이밍 변환됨.)
}

message GrpcBoardSaveReply {
  GrpcBoard board = 1;
}

message GrpcBoard {
  string board_id = 1;
  string category_id = 2;
  string title = 3;
  sint32 content = 4;
  GrpcBoardStatus status = 5;
  repeated string tag = 6;
  google.protobuf.Timestamp created_at = 254;
  google.protobuf.Timestamp updated_at = 255;
}

enum GrpcBoardStatus {
  PENDING = 0;
  ACTIVE = 1;
  BLIND = 2;
  REMOVED = 3;
}
